логика обработки завершена